add: desmos and input

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,14 +3,21 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Vizcal</title>
-		<meta
+		<!-- TODO: uncomment -->
+		<!-- <meta
 			http-equiv="Content-Security-Policy"
-			content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
-		/>
+			content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'"
+		/> -->
 	</head>
 
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/index.jsx"></script>
+		<script src="/jquery.js"></script>
+		<script src="/mathquill.js"></script>
+		<script>
+			window.MathQuill = MathQuill.getInterface(2)
+		</script>
+		<script src="/desmos.js"></script>
 	</body>
 </html>
